# ChangeLog for dev-ruby/diff-lcs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/diff-lcs/ChangeLog,v 1.54 2014/04/05 23:00:13 mrueg Exp $

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> diff-lcs-1.1.3.ebuild,
  diff-lcs-1.2.5-r1.ebuild, diff-lcs-1.2.5.ebuild:
  Remove ree18 and ruby18 target.

*diff-lcs-1.2.5-r1 (01 Apr 2014)

  01 Apr 2014; Hans de Graaff <graaff@gentoo.org> +diff-lcs-1.2.5-r1.ebuild:
  Add ruby21. Drop alpha, sparc keywords: bug 465948.

  26 Dec 2013; Markus Meier <maekke@gentoo.org> diff-lcs-1.1.3.ebuild:
  arm stable, bug #493780

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -diff-lcs-1.2.1.ebuild,
  -diff-lcs-1.2.4.ebuild:
  Cleanup old.

*diff-lcs-1.2.5 (29 Nov 2013)

  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> +diff-lcs-1.2.5.ebuild:
  Version bump.

  06 Oct 2013; Hans de Graaff <graaff@gentoo.org> diff-lcs-1.2.4.ebuild:
  Add ruby20.

*diff-lcs-1.2.4 (01 May 2013)

  01 May 2013; Hans de Graaff <graaff@gentoo.org> +diff-lcs-1.2.4.ebuild:
  Version bump.

  01 May 2013; Hans de Graaff <graaff@gentoo.org> -diff-lcs-1.1.2-r2.ebuild:
  Cleanup.

  14 Mar 2013; Hans de Graaff <graaff@gentoo.org> diff-lcs-1.2.1.ebuild:
  Avoid hoe plugins and their dependencies. Fixes bug 461618.

*diff-lcs-1.2.1 (03 Mar 2013)

  03 Mar 2013; Hans de Graaff <graaff@gentoo.org> +diff-lcs-1.2.1.ebuild:
  Version bump.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> diff-lcs-1.1.3.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  06 Nov 2012; Jeroen Roovers <jer@gentoo.org> diff-lcs-1.1.3.ebuild:
  Stable for HPPA (bug #426668).

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> diff-lcs-1.1.2-r2.ebuild,
  diff-lcs-1.1.3.ebuild:
  alpha stable

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> diff-lcs-1.1.3.ebuild:
  ia64/sparc stable wrt #426668

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> diff-lcs-1.1.3.ebuild: