@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST diff-lcs-1.1.3.gem 41472 SHA256 fb8291deabeaacf9adbdcaf988db176ae461f833770ff2947191ead4ead09897 SHA512 672c59f8d14d8612e9fc60b55c69bcbc5c817a11e84da13b9b06e43a41ac9a87ae0c1ea095897bcb65aa92efa60b3f02a4ef75010980c2553f05546ac50e4a51 WHIRLPOOL cbb0dc7a07f39670e8f2e03bff29611c0d421e8c6c632e95de9e7d737d30a45562e3d786d0b7dea97cec796ccd1700a3db13c4d7927c82ca546853d101e96370
 DIST diff-lcs-1.2.5.gem 49152 SHA256 a1d3dde665292317a883d319066792e3f0e6a24cade4bc4cc47605d27664c9ed SHA512 ce15cb794a97f9af8585c46b7a2404e1ad6e24e4910b6aa6c5126ef5996d86700979a54a154bab1c0602f19021b287dc865db3eebdc901fb42056f1e2180d0fe WHIRLPOOL 10076561d9895a3cc3c880f21e34e17aacdfcb790dbad44eedf48644eef5e9e04e65d3e4e8c16353f8bbfaa4a1d848a827cd5c2e2d57b8b58eeea3441bce1d7d
 EBUILD diff-lcs-1.1.3.ebuild 952 SHA256 640589d0180ccb6afc3b0ea57527dc33ce571d873f027042bb751eb70a4b7939 SHA512 2f33e50f8309fec17baca700c99b5941fa352d49b00d222f0ec84689ba882f1e35a90a0adce986cc101ffd1696df2c4b3850a59d4f81f021c0a96652e14a2627 WHIRLPOOL 25d805b5bfbd688153ee9b45199b1e53f107a669a9e281cc216c11587748d0152eea2542048625bc8b193c123e82edeecae2c6b10b0322270ca1a9b752f55e2f
 EBUILD diff-lcs-1.2.5-r1.ebuild 756 SHA256 c1a1860d0178b0d8891947ae90f9380c3b94dda7ded54f130187e15c22af9093 SHA512 713be61d3f1d03754f704ed8316dcbdb15ff196c34ef74e59a44a1429922cbb35f1c8f74fdc462432b1ee6102a5f57ede2b04cbad2d7adaba6aba9483a6260e4 WHIRLPOOL 162e7c9cffd2e27b88ab4a6a4bd90c43ee8d8ebfdfbe6b51d3802b1790d4e50fda0c53d4e7c5aa8f1eef21b25573da14ac47171cab4a9d33e72b3990d5183973
-EBUILD diff-lcs-1.2.5.ebuild 760 SHA256 90c2998c17eec6c661dd316e403b0cd07f899b2ac75a5777a61a9dbb88df7b20 SHA512 f45d4d42717ac3cb3e90d75a869f242e64d486d72da34bc17572c960c344963ec96693286d8bc027daad7666e2748005cd1b449b0a47cb285f0f9f009242ae1c WHIRLPOOL 9ccf8d71a01d928d119c9266be1137c9a9691f35a00b94f72ad7b9712d2a5b580a1558018402c8fdce700390631790adb8249deec7de228b1d97cc164bb0f21a
-MISC ChangeLog 6915 SHA256 555f7ff220f68493c73bcb640c744ba6f01516d08806bcd8efdb22c27a028156 SHA512 631fe782284ac321a9dbc7a9e5e9140d6ada6ec75645abf5b1b1cdd82912afe2c7e926d058d0395281957d8d5193a0813d6c9c625eff1555a3dd59541d5a7b1f WHIRLPOOL 4fbe1b3ccc15ef895f918eae5edaa3e17a56de05ba9da88eaae2e0a7e53ebe79da99a1bb8e7579dd970c2b2b1218a05ca8cb174294872f72f153abdf0522da54
+EBUILD diff-lcs-1.2.5.ebuild 757 SHA256 22fe1693267e4bae8398bd076ea9213654c62a6209fbc632e2631ced936f87af SHA512 4ac3c6339d4acc01cee33e3810bcc089a4a0f3b0ecc92872fd13ae3073132a42425718c40430fe7da727360d47af26ebd623ae0b514a69708ba72f01fd76ad7f WHIRLPOOL 9c789f3b038d3770286b6c1f6846d01cb0df30dc45f7fbfca7bf72c7fab24110116fae40af434fdfcb715d634e2b5f1dc902d364e69bbf280d36ac17e370ac03
+MISC ChangeLog 7017 SHA256 92dff7fb7885ae0722b38fc5b57134d101a3b8e60e9e668103337de3e8bd9708 SHA512 6a05b10668f49841388888db81cf113e71edb4fd4df9ffe529fca8600444e69bc82dcfa17f461a58daf0cf0b3ec36ad1d85b9347013fb385c196f59a53b15ac9 WHIRLPOOL 8225e020885562c313803f1c0271ba1db0972c45c1e1ec5051d4ecb50148746269bbd6e7c81a9a74df1114134bbcb32017dfdaf420f9508d15f8db55db75abba
 MISC metadata.xml 232 SHA256 7fc099a9e8cda0febb6431f23e76d7782dde1610bed8e42afce16e96a8c5ee93 SHA512 261beaa3f5183223144d06e4dd786eba079b5e00135ec0a1324cfd85f7983496856d28946c78d9d1ca1d489a6a94a74808063726494a69bc52b799d4a70aade2 WHIRLPOOL ebcf913836744974d6c315280df14330482b5a2186e9677027de2d3bb8f9bd1c1bbf731849a2fb404971470147a6b8191731a715904a7985a5e3e7aabd5e2d15
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlNb8gkACgkQVWmRsqeSphO9pgCfTKOxgP4mkslBZ7WFWOpkdJ/W
+P4gAn227MOvhL4g2HG7RE5BaXiNhqxIQ
+=QaB0
+-----END PGP SIGNATURE-----
