@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST rspec-expectations-2.12.1-git.tgz 82402 SHA256 6166e27de969815085832f56d253521bd1266b762134bc791727d7638a89e38b SHA512 2183f70e8fe885878121b6070fede90458e4dd628d9b7531ee7f2b8ce5ce9f3b35ea219ed96ebd63be6f430fb03c8049a8d11b8666ddfa6961d8e5067e5b0fcb WHIRLPOOL 5191c6dd4623f54412d7443321614bf84c583e2e0048344378dbe7aa49d9ea5b2f6a5f8b39e473af48899d6325c0b867734acc16e6478ee9192641368332c48a
 DIST rspec-expectations-2.13.0-git.tgz 86856 SHA256 52f2aeb70289c21c7b8755c914a31b5cdd7c465bd9828730ac6889eecdb28f01 SHA512 0400797e0ced2d6ce8adddcba049e4f94fe3ec0da027869c86204dd3794738d59fe8594ee8e12fc733d39ba99820346798f37272c1a5eafa87d302c4e6ca0947 WHIRLPOOL 5379cb91cd4deb8786abafdc462a84644656d317f6c805f6a1494e6d2f95173778b877fcc803fe99ff590124724d29eaec39c8c66f3b246e653686aae28f9e76
 DIST rspec-expectations-2.14.5-git.tgz 93680 SHA256 ceba7a62ad87285f1ea01db4798efbbde4020b82a109cc260ec358061367e5b9 SHA512 237ed56cd185bc5d0d60ed14e20ded1840ef10711693c43ffaa20ec65cdd6b891aba3a6f1f38bb6962c31d51364758d1898e3bcba14a95c4abc73dff4dac1b65 WHIRLPOOL b9860d7bbd7e33143de655d3bcae6925a91ae5992f47b75ae9c61203c9cddcfb5a2ad0d8d3152a725ff4174359bdf56c5d8dbe24b4b1bb56e3aab292ddfc7a5d
 EBUILD rspec-expectations-2.12.1.ebuild 1329 SHA256 407b4eb1588e96ca9bcf953bf86566353390b79a59785cd59cb40769ef0731d8 SHA512 d65522b2f59bcaef4e01ec8f439760ae279f2aa4ddec3610844b8d2e57467bbac57ef5c602b01d30178e340ffca1bef0837e3aefa325429a9cd8075b08f76b27 WHIRLPOOL 320083852b0d3f3a4b608b1542cec92de3755cc948c31494a5c1048677f0ef737e6e718a60a295d0cd58a5206ad28acfec735dd52dfaeff9e6345ac64adee654
 EBUILD rspec-expectations-2.13.0.ebuild 1320 SHA256 e6165490c8693328bf21534e776a2fa577acdbc5b9be414a61254eb30b7b8a40 SHA512 a8101dfb49bae97058d5d972db9a4ef1cc0e4a3cc8558249c908720e3cac1c2034ba80b68be9e0b293d0b439d6a2b41f747fa1a00f8798acd5faa62208fb93b6 WHIRLPOOL 7c71c72cc098c095cb904138728512fc797f2bed60c35798878e52c71f51eaf30cdc5ee364f08e5acde0a15d4cc1d7a2a2e9032e3a1ff81db617f890c5ea8fc9
 EBUILD rspec-expectations-2.14.5-r1.ebuild 1435 SHA256 5bd8bf38a915d51db4a0b8c9f72b927987929057afdeb8a3c548be5787a2bca5 SHA512 d8c6460f0034ae8360bbe96c0298277ed9d014a8ae3923512f61eae1aaf417160c56c5493cd5e44c54c43439b02e582ae73f093c1c1a3b36789b5c81b34e341e WHIRLPOOL 63b7a04b2d9766249c9d2b41f21cf6fc25906d8ccaf66f962008fef71aab3b36e4f0cb59654172912d9e45ed8b2ad4541ff3090d6358130f2fb3aabb1fc8a347
-EBUILD rspec-expectations-2.14.5.ebuild 1438 SHA256 43fbde05e2317fc3ab8f0d0228b309e1b3199d0a0e707c96037e2717b7459289 SHA512 39a4bd03572ecb464f85225f01b86b81ff16fc8c3130dcd7aaf631ea7dd7227d31a142f1152b6cc18842ff5463fdf79ac2a3f1635d980ee91aea39a51812f9b5 WHIRLPOOL 96d557bb0e84dad6d17df2b88f2e638d2271d7aed5be9a7cc17048688853240bf23ee8477a13d6ad3726782612b6dac9396ba635040df08525d0417e203c07a5
-MISC ChangeLog 8881 SHA256 25f6b6af9fed289729d890ad9aaa126f0b99a229d18e27c1077e6a5798e0d693 SHA512 442a36b6f9991f3679bfd672884f3900ddae9955ae7188b63a21877869022e3e866c54cb7be0b13b1cb2acc1c91c909efd92818643bfc298ef101b8b4679568d WHIRLPOOL 61f9ce9605af6d8bac8324f4090692619c5cdcec3adee6a41a412f9084638c9a732b4e13e24a5f5adc5be65226c981324aa6661df0273d0ea4d50ffaf4bfce02
+EBUILD rspec-expectations-2.14.5.ebuild 1435 SHA256 69837b3c4873bbf933566c2a3eb986f03238c1d62dbaef471cfa429542f8f903 SHA512 e4626ded26fc3dfa510d25588277cab5a50ccf1f444b7ca0785c1bf128afca8c5fd5c8bb181e4cf8082381a28434b0f7be38cf94b910af50991f865d7ef7a29c WHIRLPOOL 6a31a8e68f21525eb582593b39b5916e613715d5499f80d1bd6c009570dc353814e09cbad8b17e60783fc1047ffcb051095637d6eecf4b1da7451781db25b738
+MISC ChangeLog 8996 SHA256 b8930b64211908e3a4a18702953d85689c56bd168df3f761aa623de86cee81a7 SHA512 58119f909d1a1fd49b90076ba896597d353392d1649e98433e07c78e9bc4e3fe9e3788dd82c1bf81924556e75f459236c6ee5d22fbf09f34201681aef7806a3e WHIRLPOOL 00aa06dc30f60d293c840a910c2c8a97744ed1d2c46550877c30a15657911ecbfec18ceeaa94972284f5cb20ce9234db05f000e6df4770f6367ffce010f625a2
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlNb8nAACgkQVWmRsqeSphMUlwCfZnvAULsZbiQ15U+qbXrdyYps
+9DYAn3N+jwnO4BHviL8oUb2CjjLACfWE
+=SGTp
+-----END PGP SIGNATURE-----
