@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX rspec-mocks-2.4.0-no-cucumber.patch 2769 SHA256 9681154da4940032c3cadf176936d9bd951a474f68fc9010ee67fbc6819b79c0 SHA512 a195649901307acafc57f4236493d01ed9ff976d2d889b03bc677cf13b2e47e903d44293bf3ef1d72d8e916b01ab02d7930b86cd6014e450b3e5b2540000e05c WHIRLPOOL 855afbe4e17d1175da748fa9a5ed1bbf193db8c9dbbd1a8ebc32c172db7f8b8af7a8897bbb26266ae0f0d8d025082a6a71e78bb24917ee90c6253686473de4c5
 DIST rspec-mocks-2.12.1-git.tgz 71235 SHA256 7602e3d83988bc1694abf10825d46485681beafa8fbfb65c067d01cb8100cebf SHA512 146fe9de3f22036a202bc064b1ed8520c7c34543c8160a6a86f80774578e40afd935c0656875cb101bb1d40da71c047c6307d1ae404676b8c45e660d81738593 WHIRLPOOL e2c274bcfb072c42840946bb8ac38da83f1694ffafc6e6b784dace40a651b41f15ad7a61536961840a02bd35a4d41d88d2ae1ea1f9d69399304454ef288f3666
 DIST rspec-mocks-2.12.2-git.tgz 72237 SHA256 6753daefa839704b889fe9ca5af6209cbf12f6eb5108dff61130172b71e414c6 SHA512 7e556044aab99522704605d611972eec2536c4fe1a5ee4ada4dbf1556d2181c4461cf442396ffac1f58c44779440b31f6c95b86e5e98bccf4196e1889569e004 WHIRLPOOL ff504ebdc6c6921c68eae9644cd00b2e12e804a72b7618beb79444944cb6fab2bc7dbe78528d788c9c53d9c42ea69b3bbb121f1a3b10bf1d0b70085c3bc2868e
@@ -7,6 +10,13 @@ EBUILD rspec-mocks-2.12.1.ebuild 1118 SHA256 0383d17269a6f282c752fcbad6b4186e11a
 EBUILD rspec-mocks-2.12.2.ebuild 1126 SHA256 f739fd5f3b19b482e52e6bb0a89834169811a85f2e3dfcadbedc4eda0a9c26b7 SHA512 45c943737a53a82d0c97f8d0c0aba9bfce6f499bdef7d5ae75260dc72f59539eb1ce145cee3d9c2505c4563ec9a0d501fa1825c451e4aff3d97e4ea4ed53e57d WHIRLPOOL 7f37172700fcfef2c486586902fcc50a78b313caeef9f92df9418839b1d1769b9568677a532747032ab586dd0608fbc594cec744e3e7ecfc9b5f8fbce13a63c3
 EBUILD rspec-mocks-2.13.1.ebuild 1110 SHA256 1464a918bf91fb6904ea6d024ba52f1051c4041442c98fe796bdc17307c89d0f SHA512 ebce06a925f9f62c7f3f3fd50d08e61cd19efa39b6e8158499f611b1e8d8d8b5e6023a4421c575aaa165961fc4a761741f0e2be4ae70c51d14654f1b58a3f9ee WHIRLPOOL 13e6b9fc3fe20bdda558e3e5e4a438816bed5bec119ab9a70cd3ec7518d4943f608cdc75895b1f389e64e496326beec54c4547720071c3fc1e546b75fd418d96
 EBUILD rspec-mocks-2.14.6-r1.ebuild 1216 SHA256 ca6154cb0edbf1e25cb3daa46e3c09af0438ba0b0c5250638b94711b3542b5e0 SHA512 ddb08b9cb6dc859da9b0bc44b1eaf1063a8a5fb4284fff60988eb6612878e8aefaa7060e4fac846f60ca02180e924f7b97df21ac6605df0f14b1f332cc696aa2 WHIRLPOOL fe2c131e357f6514a02a5ae9b74c7b75a246fdda68e6978c4964b7f4e0d328791272607fbca98afda31fcc573314106c18535bf8bdfe86287745f8ee606b402e
-EBUILD rspec-mocks-2.14.6.ebuild 1219 SHA256 bc01ea1fa11099b249d14fae47846a208c3a020beeb0c000206229cdb3829460 SHA512 8f2d61518ad8205fc3581316daef81ccb9d4bed0928dadd846d2556fb6a995e478947ca759a3ba2193323e351d5ad9f102fcba2365b4571dc770ab70612cebbe WHIRLPOOL 60b05505310901b35cd54909a0f8f8c067f0a4a291487f745977e17f2921afa757daa282d08e5d08f446fa070c8998023daef895df002328b2c67c3142569192
-MISC ChangeLog 8877 SHA256 ba7e9465b25717908adecb359506fc65a6c7fa062ccfc95a83bd7d6f3314263c SHA512 9184971e5601a9cb9d986884e03e15fe01dc0e758cdd7de4ef493bf35e08d215d48b9e6501a40d719be47b90ce96cb68d4a0a7843070fe162137cb6cb9deadc7 WHIRLPOOL be8accac612bf403b7c5481be0f4eff08c2113e1ef59bf0323fe9d5d482f574a0f375b3d41713d547ae64ab68583f62e26d8dd1a31695f8cfaabbdbe29af7703
+EBUILD rspec-mocks-2.14.6.ebuild 1216 SHA256 8ef0eb65bfb20f3ccde5e23ec04c7725f7a466bfb92ea7481d3681b8071989ad SHA512 367e98169f418b2c11a3cd1ee3b66acc3d852915e6ddd0a5b4c5548e0b1616b832f4227b5b1424a1788731201e25747051459ca5f81596ad66ff9fbd27e24acb WHIRLPOOL f60f7b2a34168a1c3b7375ba5064dd85efeeb8b236f99a1e51bfd612139528a47b882e9fdf3f8f5b96f892107726640dbd689aed79e44a4ddb32b6bd80e9977c
+MISC ChangeLog 8983 SHA256 d65efa1b15cf2b90af0d2af4cfe1b18640e5c43db10b3ea9e8436bcaa4c48417 SHA512 d5d6869d6560c624a8fbec336916e382fb54cdde1bab23ccfe31512546818d318691109deecb769e1eabc1789d20fe35d6dd8a86162d7c6683464eff84dc84b4 WHIRLPOOL 2b4b4cc9e788300e966feafdcbd39f18fa089baaba9053ad72956bfa18cafa4f28c6f2990c6e4fb966171ecf2bd1689c06141e6bdda06c88fb864dc312a06680
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlNb8koACgkQVWmRsqeSphPTyACfWuvi/fpqM/2nHm/8qXSqWLXF
+fG4Anjb2whgRUQiJ9aE4OJ9rXALKoIL0
+=L7qM
+-----END PGP SIGNATURE-----
