@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rspec-expectations
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.62 2014/04/05 22:59:20 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.63 2014/04/26 17:52:47 jer Exp $
+
+  26 Apr 2014; Jeroen Roovers <jer@gentoo.org>
+  rspec-expectations-2.14.5.ebuild:
+  Stable for HPPA (bug #508416).
 
   05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> rspec-expectations-2.12.1.ebuild,
   rspec-expectations-2.13.0.ebuild, rspec-expectations-2.14.5-r1.ebuild,
