@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rspec-mocks
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-mocks/ChangeLog,v 1.67 2014/04/05 22:57:59 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-mocks/ChangeLog,v 1.68 2014/04/26 17:52:09 jer Exp $
+
+  26 Apr 2014; Jeroen Roovers <jer@gentoo.org> rspec-mocks-2.14.6.ebuild:
+  Stable for HPPA (bug #508416).
 
   05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> rspec-mocks-2.12.1.ebuild,
   rspec-mocks-2.12.2.ebuild, rspec-mocks-2.13.1.ebuild,
