@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/diff-lcs
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/diff-lcs/ChangeLog,v 1.54 2014/04/05 23:00:13 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/diff-lcs/ChangeLog,v 1.55 2014/04/26 17:51:04 jer Exp $
+
+  26 Apr 2014; Jeroen Roovers <jer@gentoo.org> diff-lcs-1.2.5.ebuild:
+  Stable for HPPA (bug #508416).
 
   05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> diff-lcs-1.1.3.ebuild,
   diff-lcs-1.2.5-r1.ebuild, diff-lcs-1.2.5.ebuild:
